ptycho UI fixes

--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -295,6 +295,7 @@
     "    shifted_probes = probe_array * np.sqrt(probe_normalization)\n",
     "\n",
     "    pbar.reset(iterations)\n",
+    "    pbar.colour= None\n",
     "    pbar.refresh()\n",
     "    for iter_index in range(iterations):\n",
     "\n",
@@ -344,6 +345,8 @@
     "        np.random.shuffle(order)\n",
     "        update_ptycho_panel(recon)\n",
     "        pbar.update(1)\n",
+    "\n",
+    "    pbar.colour='green'\n",
     "    return recon"
    ]
   },
@@ -532,6 +535,47 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "def65a73-2020-4d68-92a2-0ca8e07929a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_remaining_figure(\n",
+    "    inner_collection_angle,\n",
+    "    outer_collection_angle,\n",
+    "    virtual_masks_annular,\n",
+    "    icom,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "    ctf_dpc = ctf.compute_ctf(icom)\n",
+    "    _, I_bins_dpc = ctf.radially_average_ctf(\n",
+    "        ctf_dpc,\n",
+    "        (sampling,sampling)\n",
+    "    )\n",
+    "\n",
+    "    # 2D data\n",
+    "    im_detector.set_data(ctf.combined_images_rgb(virtual_masks_annular))\n",
+    "    im_ctf_dpc.set_data(\n",
+    "        ctf.histogram_scaling(\n",
+    "            np.fft.fftshift(ctf_dpc),\n",
+    "            normalize=True\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # 1D lines\n",
+    "    plot_ctf_dpc.set_ydata(I_bins_dpc)\n",
+    "\n",
+    "    # collections (vlines)\n",
+    "    ax_ctf_rad.collections[0].remove()\n",
+    "    ax_ctf_rad.vlines([inner_collection_angle,outer_collection_angle],0,2,colors='k',linestyles='--',linewidth=1,)\n",
+    "\n",
+    "    # re-draw figure\n",
+    "    fig.canvas.draw()\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -597,14 +641,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
+   "id": "454d836e-17e8-4015-b81f-649dcace4f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_icom(\n",
+    "    inner_collection_angle,\n",
+    "    outer_collection_angle,\n",
+    "    number_of_segments,\n",
+    "    rotation_offset,\n",
+    "):\n",
+    "    \"\"\" \"\"\"\n",
+    "\n",
+    "    # compute new datasets\n",
+    "    virtual_masks_annular = annular_segmented_detectors(\n",
+    "        gpts=(n,n),\n",
+    "        sampling=(sampling,sampling),\n",
+    "        n_angular_bins=number_of_segments,\n",
+    "        inner_radius=inner_collection_angle,\n",
+    "        outer_radius=outer_collection_angle,\n",
+    "        rotation_offset=np.deg2rad(rotation_offset),\n",
+    "    )   \n",
+    "    \n",
+    "    com_x, com_y = compute_com_using_virtual_detectors(\n",
+    "        intensities,\n",
+    "        virtual_masks_annular,\n",
+    "        intensities_sum,\n",
+    "        sx,sy,\n",
+    "        kxa,kya,\n",
+    "    )\n",
+    "\n",
+    "    icom_annular = integrate_com(com_x,com_y,kx_op,ky_op)\n",
+    "\n",
+    "    update_remaining_figure(\n",
+    "        inner_collection_angle,\n",
+    "        outer_collection_angle,\n",
+    "        virtual_masks_annular,\n",
+    "        icom_annular,\n",
+    "    )\n",
+    "\n",
+    "    reset_wrapper()\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cbd8007045b4fc09a7d9e5fdfcdfef3",
+       "model_id": "0b98bc17e234452aabd1ae22a5644090",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +703,7 @@
        "Output()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,8 +783,7 @@
     ")\n",
     "\n",
     "iterate_button = ipywidgets.Button(\n",
-    "    description=\"iterate\",\n",
-    "    icon=\"repeat\",\n",
+    "    description=\"reconstruct (expensive)\",\n",
     "    layout=smaller_layout,\n",
     ")\n",
     "\n",
@@ -706,6 +796,7 @@
     "    \"\"\" \"\"\"\n",
     "    ptycho_recon[0] = np.ones((n,n),dtype=np.complex128)\n",
     "    update_ptycho_panel(ptycho_recon[0])\n",
+    "    iterate_button.button_style = 'warning'\n",
     "\n",
     "reset_button.on_click(reset_wrapper)\n",
     "\n",
@@ -732,10 +823,10 @@
     "        pbar=pbar,\n",
     "    )\n",
     "    disable_all(False)\n",
+    "    iterate_button.button_style = ''\n",
     "\n",
     "iterate_button.on_click(click_wrapper)\n",
     "pbar = tqdm(total=8,display=False,ncols=300)\n",
-    "\n",
     "\n",
     "ipywidgets.interactive_output(\n",
     "    compute_icom,\n",
@@ -750,14 +841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc044fb33d8441a6933885f7f826791f",
+       "model_id": "c7cdd15214c245d782648f17cea0bfed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -789,6 +880,14 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a7d51a9-a192-4c14-abef-43dd224717e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
