--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -688,14 +688,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b98bc17e234452aabd1ae22a5644090",
+       "model_id": "0a8b539fe8ce4de3b005b2ba8681c1b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -703,7 +703,7 @@
        "Output()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,6 +797,7 @@
     "    ptycho_recon[0] = np.ones((n,n),dtype=np.complex128)\n",
     "    update_ptycho_panel(ptycho_recon[0])\n",
     "    iterate_button.button_style = 'warning'\n",
+    "    pbar.reset()\n",
     "\n",
     "reset_button.on_click(reset_wrapper)\n",
     "\n",
@@ -841,14 +842,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7cdd15214c245d782648f17cea0bfed",
+       "model_id": "d18345d68d3a41f1a513aaab56928c33",
        "version_major": 2,
        "version_minor": 0
       },
