--- a/notebooks/03_ssb_contrast_transfer.ipynb
+++ b/notebooks/03_ssb_contrast_transfer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -308,6 +308,7 @@
     "    virtual_masks_annular,\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
+    "    use_OBF_weighting,\n",
     "    intensities_FFT=None,\n",
     "    pbar=None\n",
     "): \n",
@@ -320,7 +321,15 @@
     "    \n",
     "    A_q = aperture(K,q_probe,reciprocal_sampling) * np.exp(-1j*np.pi*wavelength*defocus*K**2)\n",
     "    A_q_conj = A_q.conj()\n",
-    "    A_q_sum = np.abs(A_q).sum()\n",
+    "\n",
+    "    if use_OBF_weighting:\n",
+    "        probe_normalization = np.abs(A_q)**2\n",
+    "        probe_normalization /= probe_normalization.sum()\n",
+    "\n",
+    "        mask_gamma_using_virtual_detectors(\n",
+    "            probe_normalization,\n",
+    "            virtual_masks_annular,\n",
+    "        )\n",
     "\n",
     "    if pbar is not None:\n",
     "        pbar.reset(sx*sy)\n",
@@ -355,7 +364,14 @@
     "                )\n",
     "                gamma_abs = np.abs(gamma)\n",
     "                gamma_ind = gamma_abs > threshold\n",
-    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/gamma_abs[gamma_ind]).sum()\n",
+    "                \n",
+    "                normalization = gamma_abs[gamma_ind]\n",
+    "                \n",
+    "                if use_OBF_weighting:\n",
+    "                    d = probe_normalization[gamma_ind]\n",
+    "                    normalization = d * np.sqrt(np.sum(normalization**2 /d))\n",
+    "                    \n",
+    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/normalization).sum()\n",
     "\n",
     "                if pbar is not None:\n",
     "                    pbar.update(1)\n",
@@ -370,6 +386,7 @@
     "    intensities_FFT,\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
+    "    use_OBF_weighting,\n",
     "    pbar=None,\n",
     "): \n",
     "    aperture = soft_aperture if use_soft_aperture else hard_aperture\n",
@@ -378,7 +395,10 @@
     "    \n",
     "    A_q = aperture(K,q_probe,reciprocal_sampling) * np.exp(-1j*np.pi*wavelength*defocus*K**2)\n",
     "    A_q_conj = A_q.conj()\n",
-    "    A_q_sum = np.abs(A_q).sum()\n",
+    "    \n",
+    "    if use_OBF_weighting:\n",
+    "        probe_normalization = np.abs(A_q)**2\n",
+    "        probe_normalization /= probe_normalization.sum()\n",
     "\n",
     "    if pbar is not None:\n",
     "        pbar.reset(sx*sy)\n",
@@ -400,7 +420,13 @@
     "                gamma = A_q_conj * A_q_minus_Q - A_q * A_q_plus_Q.conj()\n",
     "                gamma_abs = np.abs(gamma)\n",
     "                gamma_ind = gamma_abs > threshold\n",
-    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/gamma_abs[gamma_ind]).sum()\n",
+    "                normalization = gamma_abs[gamma_ind]\n",
+    "                \n",
+    "                if use_OBF_weighting:\n",
+    "                    d = probe_normalization[gamma_ind]\n",
+    "                    normalization = d * np.sqrt(np.sum(normalization**2 /d))\n",
+    "                    \n",
+    "                psi[ind_x,ind_y] = (G[gamma_ind] *  np.conj(gamma[gamma_ind])/normalization).sum()\n",
     "\n",
     "                if pbar is not None:\n",
     "                    pbar.update(1)\n",
@@ -414,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -423,6 +449,7 @@
     "    intensities_FFT=intensities_FFT[0],\n",
     "    defocus=0,\n",
     "    use_soft_aperture=False,\n",
+    "    use_OBF_weighting=False,\n",
     ")\n",
     "\n",
     "numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
@@ -433,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -455,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -506,14 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
     "layout = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
+    "layout_half = ipywidgets.Layout(width=\"160px\",height=\"30px\")\n",
+    "\n",
     "kwargs = {'style':style,'layout':layout,'continuous_update':False}\n",
+    "kwargs_half = {'style':style,'layout':layout_half,'continuous_update':False}\n",
     "\n",
     "inner_collection_angle_slider = ipywidgets.FloatSlider(\n",
     "    value = q_probe/2,\n",
@@ -567,16 +597,16 @@
     "    **kwargs\n",
     ")\n",
     "\n",
-    "# soft_aperture_toggle = ipywidgets.ToggleButton(\n",
-    "#     value=False,\n",
-    "#     description='use soft aperture',\n",
-    "#     **kwargs\n",
-    "# )\n",
+    "frequencies_toggle = ipywidgets.ToggleButton(\n",
+    "    description='show low freq trotter',\n",
+    "    value=True,\n",
+    "    **kwargs_half\n",
+    ")\n",
     "\n",
-    "frequencies_toggle = ipywidgets.ToggleButtons(\n",
-    "    options=['show low freq trotter','show high freq trotter', ],\n",
-    "    value='show low freq trotter',\n",
-    "    **kwargs\n",
+    "OBF_toggle = ipywidgets.ToggleButton(\n",
+    "    value=False,\n",
+    "    description='use OBF weights',\n",
+    "    **kwargs_half\n",
     ")\n",
     "\n",
     "simulate_button = ipywidgets.Button(\n",
@@ -603,6 +633,7 @@
     "    defocus_slider.disabled = boolean\n",
     "    # soft_aperture_toggle.disabled = boolean\n",
     "    frequencies_toggle.disabled = boolean\n",
+    "    OBF_toggle.disabled = boolean\n",
     "    simulate_button.disabled = boolean\n",
     "    reconstruct_button.disabled = boolean\n",
     "    return None\n",
@@ -616,13 +647,13 @@
     "    simulate_button.button_style = 'warning'\n",
     "    simulation_pbar.reset()\n",
     "defocus_slider.observe(defocus_aperture_wrapper,names='value')\n",
-    "# soft_aperture_toggle.observe(defocus_aperture_wrapper,names='value')\n",
     "\n",
     "def simulate_wrapper(*args):\n",
     "    disable_all(True)\n",
     "    simulate_and_update_trotters(\n",
     "        defocus_slider.value,\n",
     "        False,\n",
+    "        OBF_toggle.value,\n",
     "        pbar=simulation_pbar,\n",
     "    )\n",
     "    disable_all(False)\n",
@@ -636,6 +667,7 @@
     "    update_ctfs(\n",
     "        defocus_slider.value,\n",
     "        False,\n",
+    "        OBF_toggle.value,\n",
     "        pbar=reconstruction_pbar,\n",
     "    )\n",
     "    disable_all(False)\n",
@@ -644,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -652,6 +684,7 @@
     "def simulate_and_update_trotters(\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
+    "    use_OBF_weighting,\n",
     "    pbar=None,\n",
     "):\n",
     "    \"\"\" \"\"\"\n",
@@ -663,7 +696,7 @@
     "    )\n",
     "    intensities_FFT[0] = np.fft.fft2(intensities[0],axes=(0,1))\n",
     "\n",
-    "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
+    "    ind = n//12 if frequencies_toggle.value else n//8\n",
     "    \n",
     "    update_virtual_and_pixelated_trotters(\n",
     "        inner_collection_angle_slider.value,\n",
@@ -675,6 +708,7 @@
     "    update_pixelated_ctf(\n",
     "        defocus=defocus,\n",
     "        use_soft_aperture=use_soft_aperture,\n",
+    "        use_OBF_weighting=use_OBF_weighting,\n",
     "        intensities_FFT = intensities_FFT[0],\n",
     "    )\n",
     "    \n",
@@ -683,6 +717,7 @@
     "def update_pixelated_ctf(\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
+    "    use_OBF_weighting,\n",
     "    intensities_FFT,\n",
     "):\n",
     "    \"\"\" \"\"\"\n",
@@ -690,6 +725,7 @@
     "        intensities_FFT=intensities_FFT,\n",
     "        defocus=defocus,\n",
     "        use_soft_aperture=use_soft_aperture,\n",
+    "        use_OBF_weighting= use_OBF_weighting,\n",
     "    )\n",
     "    \n",
     "    numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
@@ -704,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -712,6 +748,7 @@
     "def update_ctfs(\n",
     "    defocus,\n",
     "    use_soft_aperture,\n",
+    "    use_OBF_weighting,\n",
     "    intensities_FFT=None,\n",
     "    pbar=None,\n",
     "):\n",
@@ -722,6 +759,7 @@
     "        virtual_masks_annular[0],\n",
     "        defocus=defocus,\n",
     "        use_soft_aperture=use_soft_aperture,\n",
+    "        use_OBF_weighting=use_OBF_weighting,\n",
     "        intensities_FFT=intensities_FFT,\n",
     "        pbar=pbar,\n",
     "    )\n",
@@ -760,14 +798,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba34f01ad6304b1db589a3803a722658",
+       "model_id": "6c114d7c471646c880253c647553ad6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -775,7 +813,7 @@
        "Output()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +846,7 @@
     "\n",
     "    masked_intensities_FFT[0] = np.fft.fft2(masked_intensities_FFT[0],axes=(0,1))\n",
     "\n",
-    "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
+    "    ind = n//12 if frequencies_toggle.value else n//8\n",
     "\n",
     "    im_trotter_pixelated.set_data(\n",
     "        np.dstack(\n",
@@ -851,14 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_trotters_frequency(*args):\n",
     "    \n",
-    "    ind = n//12 if frequencies_toggle.value == 'show low freq trotter' else n//8\n",
+    "    ind = n//12 if frequencies_toggle.value else n//8\n",
     "    \n",
     "    im_trotter_pixelated.set_data(\n",
     "        np.dstack(\n",
@@ -885,14 +923,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
+   "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_weights(change):\n",
+    "    \n",
+    "    disable_all(True)\n",
+    "    recon_0 = ptychography_reconstruction_pixelated(\n",
+    "        intensities_FFT=intensities_FFT[0],\n",
+    "        defocus=defocus_slider.value,\n",
+    "        use_soft_aperture=False,\n",
+    "        use_OBF_weighting= change.new,\n",
+    "    )\n",
+    "    \n",
+    "    numeric_ctf_0 = np.abs(np.fft.fft2(np.angle(recon_0)))\n",
+    "    numeric_ctf_0[0,0] = 0.0\n",
+    "    \n",
+    "    q_bins_pixelated, I_bins_pixelated = ctf.radially_average_ctf(numeric_ctf_0,(sampling,sampling))\n",
+    "    plot_ctf_pixelated.set_ydata(I_bins_pixelated)\n",
+    "    plot_ctf_pixelated.set_alpha(1)\n",
+    "    im_ctf.set_alpha(0.25)\n",
+    "    plot_ctf.set_alpha(0.25)\n",
+    "    fig.canvas.draw()\n",
+    "    reconstruct_button.button_style = 'warning'\n",
+    "    reconstruction_pbar.reset()\n",
+    "    disable_all(False)\n",
+    "    return None\n",
+    "\n",
+    "OBF_toggle.observe(update_weights,'value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1af578720a514d5db542aee51ec9c1fa",
+       "model_id": "1dd5fbd5a83f4c58ba8c84aa5099a52a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -912,7 +984,7 @@
     "            ipywidgets.VBox(\n",
     "                [\n",
     "                    ipywidgets.HBox([defocus_slider,simulate_button,simulation_pbar_wrapper]),\n",
-    "                    ipywidgets.HBox([frequencies_toggle,reconstruct_button,reconstruction_pbar_wrapper]),\n",
+    "                    ipywidgets.HBox([frequencies_toggle,OBF_toggle,reconstruct_button,reconstruction_pbar_wrapper]),\n",
     "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                    ipywidgets.HBox([inner_collection_angle_slider,outer_collection_angle_slider]),\n",
     "                    ipywidgets.HBox([number_of_segments_slider,rotation_offset_slider]),\n",
@@ -924,6 +996,14 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e10d7c-b25c-49e2-afbb-9cf0f2c19c8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -942,7 +1022,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
