update colors, constrain detector angles

--- a/notebooks/01_icom_contrast_transfer.ipynb
+++ b/notebooks/01_icom_contrast_transfer.ipynb
@@ -60,7 +60,8 @@
     "sx = sy = n//scan_step_size\n",
     "phi0 = 1.0\n",
     "\n",
-    "cmap = cmr.eclipse"
+    "cmap = cmr.eclipse\n",
+    "icom_line_color = 'cornflowerblue'"
    ]
   },
   {
@@ -425,7 +426,7 @@
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
     "plot_ctf_analytic = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color='tab:green',label='annular')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# analytic SNR\n",
@@ -439,7 +440,7 @@
     "# analytic SNR radially-averaged\n",
     "ax_snr_rad = axs[1,3]\n",
     "plot_snr_analytic = ax_snr_rad.plot(q_bins_analytic_snr,I_bins_analytic_snr,color='k')[0]\n",
-    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color='tab:green')[0]\n",
+    "plot_snr = ax_snr_rad.plot(q_bins_annular_snr, I_bins_annular_snr, color=icom_line_color)[0]\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
     "for ax, title in zip(\n",
@@ -771,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "265ef3afce9c46f7b798045048a63927",
+       "model_id": "59225d5ef350411dbf001a38666e7e46",
        "version_major": 2,
        "version_minor": 0
       },
