--- a/notebooks/02_ptycho_contrast_transfer.ipynb
+++ b/notebooks/02_ptycho_contrast_transfer.ipynb
@@ -26,6 +26,8 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
     "import ctf # import custom plotting / utils\n",
+    "import cmasher as cmr\n",
+    "\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "import ipywidgets\n",
@@ -57,7 +59,11 @@
     "\n",
     "scan_step_size = 1 # pixels\n",
     "sx = sy = n//scan_step_size\n",
-    "phi0 = 1.0"
+    "phi0 = 1.0\n",
+    "\n",
+    "cmap = cmr.eclipse\n",
+    "icom_line_color = 'cornflowerblue'\n",
+    "iter_ptycho_line_color = 'mediumvioletred'"
    ]
   },
   {
@@ -505,18 +511,18 @@
     "\n",
     "# annular CTF\n",
     "ax_ctf_annular_dpc = axs[1]\n",
-    "im_ctf_dpc = ax_ctf_annular_dpc.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap='turbo')\n",
+    "im_ctf_dpc = ax_ctf_annular_dpc.imshow(ctf.histogram_scaling(np.fft.fftshift(ctf_annular),normalize=True),cmap=cmap)\n",
     "\n",
     "# ptycho CTF\n",
     "ax_ctf_annular_ptycho = axs[2]\n",
-    "im_ctf_ptycho = ax_ctf_annular_ptycho.imshow(np.zeros((n,n)),cmap='turbo',vmin=0,vmax=1)\n",
+    "im_ctf_ptycho = ax_ctf_annular_ptycho.imshow(np.zeros((n,n)),cmap=cmap,vmin=0,vmax=1)\n",
     "\n",
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[3]\n",
     "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='analytical DPC')[0]\n",
     "\n",
-    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color='tab:green',label='annular DPC')[0]\n",
-    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color='tab:blue',label='annular ptycho')[0]\n",
+    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='annular DPC')[0]\n",
+    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color=iter_ptycho_line_color,label='annular ptycho')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
@@ -714,14 +720,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "702a6f8f7de846778d84ab17996bfcb9",
+       "model_id": "ec912b8aa30c4070bcffd01ca100914e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -729,7 +735,7 @@
        "Output()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +783,12 @@
     "    value = change['new']\n",
     "    outer_collection_angle_slider.min = value*1.05\n",
     "\n",
-    "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')  \n",
+    "def update_inner_collection_angle(change):\n",
+    "    value = change['new']\n",
+    "    inner_collection_angle_slider.max = value\n",
+    "\n",
+    "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')\n",
+    "outer_collection_angle_slider.observe(update_inner_collection_angle, names='value')\n",
     "\n",
     "# rotation offset is modulo 180/n\n",
     "def update_rotation_offset_range(change):\n",
@@ -942,19 +953,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28e76e48abe54997a355b5bb2454ceb1",
+       "model_id": "180fa999d8b3402e9983db7f3b31e205",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=0, continuous_update=False, description='defocus …"
+       "VBox(children=(VBox(children=(HBox(children=(IntSlider(value=-27, continuous_update=False, description='defocu…"
       ]
      },
      "metadata": {},
@@ -987,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7bdc6bb-3878-4194-8577-0416c47a8fa2",
+   "id": "9e69fe03-1f53-4f21-9e25-f1b1a8d8a374",
    "metadata": {},
    "outputs": [],
    "source": []
