--- a/notebooks/03_ssb_contrast_transfer.ipynb
+++ b/notebooks/03_ssb_contrast_transfer.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "from matplotlib.gridspec import GridSpec\n",
     "import matplotlib.patches as mpatches\n",
     "import ctf # import custom plotting / utils\n",
+    "import cmasher as cmr\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "import ipywidgets\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -58,7 +59,12 @@
     "\n",
     "scan_step_size = 1 # pixels\n",
     "sx = sy = n//scan_step_size\n",
-    "phi0 = 1.0"
+    "phi0 = 1.0\n",
+    "\n",
+    "cmap = cmr.eclipse\n",
+    "icom_line_color = 'cornflowerblue'\n",
+    "iter_ptycho_line_color = 'mediumvioletred'\n",
+    "ssb_line_color = 'olivedrab'"
    ]
   },
   {
@@ -71,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -216,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -284,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -298,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -440,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -460,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -482,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -498,11 +504,11 @@
     "im_trotter_annular = ax_trotter_annular.imshow(virtual_masks_annular[0])\n",
     "\n",
     "ax_ctf = axs[2]\n",
-    "im_ctf = ax_ctf.imshow(virtual_masks_annular[0],cmap='turbo')\n",
+    "im_ctf = ax_ctf.imshow(virtual_masks_annular[0],cmap=cmap)\n",
     "\n",
     "ax_ctf_rad = axs[3]\n",
     "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color='k',label='pixelated')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color='tab:green',label='annular')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='annular')[0]\n",
     "\n",
     "ax_ctf_rad.set_ylim([0,1])\n",
     "ax_ctf_rad.set_xlim([0,q_max])\n",
@@ -533,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -582,7 +588,12 @@
     "    value = change['new']\n",
     "    outer_collection_angle_slider.min = value*1.05\n",
     "\n",
-    "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')  \n",
+    "def update_inner_collection_angle(change):\n",
+    "    value = change['new']\n",
+    "    inner_collection_angle_slider.max = value\n",
+    "\n",
+    "inner_collection_angle_slider.observe(update_outer_collection_angle, names='value')\n",
+    "outer_collection_angle_slider.observe(update_inner_collection_angle, names='value')\n",
     "\n",
     "# rotation offset is modulo 180/n\n",
     "def update_rotation_offset_range(change):\n",
@@ -676,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -740,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -798,14 +809,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c114d7c471646c880253c647553ad6a",
+       "model_id": "ac15674f5078411583b340c2edb7c257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -813,7 +824,7 @@
        "Output()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -923,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -957,14 +968,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dd5fbd5a83f4c58ba8c84aa5099a52a",
+       "model_id": "02daec9375ec495a8d663ff39c87d09c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1000,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e10d7c-b25c-49e2-afbb-9cf0f2c19c8c",
+   "id": "05c65fb6-3b6b-4e2a-ad44-e330a7e6d6ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1022,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
